src/client/app/admin/shared/action-item/action-item.styles.scss
.action-items-container {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

.action-item {
  display: inline-block;
  width: 150px;
  text-align: center;
  height: 150px;
  margin: 10px;
  border: 1px solid black;
  padding: 10px;
  border-radius: 15px;
}

@media (max-width: $jg-device-width-mobile) {
  .action-item {
    width: 100%;
    height: 175px;
    margin: 0;
    padding: 0;
    border: none;
    border-top: 1px solid black;
    border-radius: 0;
    font-weight: bold;
    font-size: 24px;

    img {
      float: left;
      width: 175px;
      display: inline;
    }

    .action-item-title {
      width: calc(100% - 200px);
      text-align: center;
      line-height: 175px;
      display: inline;
    }
  }
}

